# learn-opengl

./: .gitignore  Context.hpp  myGL.hpp
ColorAttribute/: CMakeLists.txt  Geometry.hpp  colors.cpp  plane.vert  smooth_color.frag
HelloGL/: CMakeLists.txt  Geometry.hpp  gradient.frag  hello.cpp  plane.vert  solid_color.frag
cvTexture/: CMakeLists.txt  color.frag  texture.cpp  texture.frag  texture.vert
